--- a/package.json
+++ b/package.json
@@ -26,23 +26,23 @@
     "xregexp": "git+https://github.com/slevithan/xregexp.git#d06eff50f87d81d2dd3afc1e854784c38b17bcc4"
   },
   "devDependencies": {
-    "chai": "~1.8.1",
-    "coffee-errors": "~0.8.5",
-    "coffee-script": "~1.6.3",
-    "coffeeify": "~0.5.2",
-    "grunt": "~0.4.2",
-    "grunt-cli": "~0.1.11",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-karma": "~0.6.2",
-    "grunt-mocha-cli": "~1.5.0",
-    "karma": "~0.10.9",
-    "karma-browserify": "0.0.6",
-    "karma-chai": "0.0.2",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-coffee-preprocessor": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-mocha": "~0.1.1",
-    "mocha": "~1.16.2"
+    "chai": "^1.9.1",
+    "coffee-errors": "^0.8.5",
+    "coffee-script": "^1.7.1",
+    "coffeeify": "^0.6.0",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.11",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^0.8.3",
+    "grunt-mocha-cli": "^1.9.0",
+    "karma": "^0.12.16",
+    "karma-bro": "^0.6.0",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "^0.1.2",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-mocha": "^0.1.1",
+    "mocha": "^1.20.1",
+    "watchify": "^0.10.2"
   },
   "engines": {
     "node": ">=0.10.0",
