--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "./node_modules/.bin/grunt test"
   },
   "dependencies": {
-    "xregexp": "git+https://github.com/slevithan/xregexp.git#d06eff50f87d81d2dd3afc1e854784c38b17bcc4"
+    "xregexp": "syntaxhighlighter/xregexp"
   },
   "devDependencies": {
     "chai": "^1.9.1",
@@ -41,8 +41,7 @@
     "karma-chrome-launcher": "^0.1.2",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.1",
-    "mocha": "^1.20.1",
-    "watchify": "^0.10.2"
+    "mocha": "^1.20.1"
   },
   "engines": {
     "node": ">=0.10.0",
