--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brush-base",
   "version": "4.0.0",
-  "description": "Brush module for SyntaxHighlighter.",
+  "description": "Base Brush class for all SyntaxHighlighter brushes.",
   "keywords": [
     "syntaxhighlighter",
     "brush"
@@ -12,34 +12,31 @@
     "name": "Alex Gorbatchev",
     "url": "https://github.com/alexgorbatchev"
   },
-  "main": "./lib/brush.js",
+  "main": "./brush-base.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/syntaxhighlighter/brush-base.git"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "karma start --single-run"
   },
   "dependencies": {
     "xregexp": "syntaxhighlighter/xregexp"
   },
   "devDependencies": {
+    "parser": "syntaxhighlighter/parser",
     "chai": "^1.9.1",
-    "coffee-errors": "^0.8.6",
-    "coffee-script": "^1.7.1",
-    "coffeeify": "^0.7.0",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.9.0",
-    "grunt-mocha-cli": "^1.9.0",
-    "karma": "^0.12.16",
-    "karma-bro": "^0.8.0",
-    "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "^0.1.2",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-mocha": "^0.1.9",
-    "mocha": "^1.20.1"
+    "babel-core": "^6.1.21",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-loader": "^6.2.0",
+    "webpack": "^1.9.6",
+    "raw-loader": "^0.5.1",
+    "karma": "^0.13.14",
+    "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-mocha-reporter": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0"
   },
   "engines": {
     "node": ">=0.10.0",
