--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "chai": "^1.9.1",
     "babel-core": "^6.1.21",
     "babel-preset-es2015": "^6.1.18",
-    "babel-loader": "^6.2.0",
     "mocha": "^2.3.4"
   },
   "engines": {
     "node": ">=0.10.0",
     "npm": ">=1.2.10"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  }
 }
