--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test": "mocha --opts mocha.opts test.js"
   },
   "dependencies": {
-    "xregexp": "syntaxhighlighter/xregexp"
+    "xregexp": "syntaxhighlighter/xregexp",
+    "html-renderer": "syntaxhighlighter/html-renderer",
+    "parser": "syntaxhighlighter/parser"
   },
   "devDependencies": {
     "chai": "^1.9.1",
