--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai": "^3.4.1",
     "babel-core": "^6.1.21",
     "babel-preset-es2015": "^6.1.18",
+    "babel-register": "^6.4.3",
     "mocha": "^2.3.4"
   },
   "engines": {
