--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/syntaxhighlighter/brush-base.git"
   },
   "scripts": {
-    "test": "mocha --opts mocha.opts test.js"
+    "test": "babel-node --only=syntaxhighlighter-* node_modules/isparta/bin/isparta cover --report text node_modules/mocha/bin/_mocha -- --opts mocha.opts test.js && node_modules/.bin/codecov"
   },
   "dependencies": {
     "syntaxhighlighter-html-renderer": "^4.0.0",
@@ -26,10 +26,13 @@
     "syntaxhighlighter-regex": "^4.0.0"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
+    "babel-cli": "^6.4.5",
     "babel-core": "^6.1.21",
     "babel-preset-es2015": "^6.1.18",
     "babel-register": "^6.4.3",
+    "chai": "^3.4.1",
+    "codecov": "^1.0.1",
+    "isparta": "^4.0.0",
     "mocha": "^2.3.4"
   },
   "engines": {
